cmake_minimum_required(VERSION 3.0.0)
set(PROJECT_NAME bookcase)
set(ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
file(GLOB_RECURSE srcs CONFIGURE_DEPENDS *.c *.h)
project(${PROJECT_NAME})
# add_subdirectory(${ROOT_DIR}/DS Paking_DS_binnary_dir)
add_subdirectory(${ROOT_DIR}/Tools Paking_Tools_binnary_dir)
add_executable(${PROJECT_NAME} ${srcs})
target_link_libraries(${PROJECT_NAME} DS)
target_link_libraries(${PROJECT_NAME} Tools)